# src/modules/auth/api/__init__.py
@@ -1,0 +1,4 @@
+from src.modules.auth.api.auth import router
+from src.modules.auth.api.admin import router as admin_router
+
+__all__ = ["router", "admin_router"]
